Started on painting route and controller
